--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,18 @@
 .map {
-  height: 85vh;
+  height: calc(100vh - 280px);
+}
+
+.button-column {
+	text-align: left;
 }
 
 .year-text {
   font-size: 30px;
+  text-align: right;
 }
 
 .timeline-range {
   width: 100%;
-}
-
-.button {
-  /* Thank you: https://www.w3schools.com/css/tryit.asp?filename=trycss_buttons_basic */
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 9px 32px;
-  text-align: center;
-  text-decoration: none;
-  float: right;
-  font-size: 16px;
-  margin: 0 2px;
-  cursor: pointer;
 }
 
 /* The popup bubble styling. */
